# difference-viewer

./: .gitignore  pyproject.toml
difference_viewer/: __init__.py  __main__.py
difference_viewer/app/: app.py  config.py
difference_viewer/components/dialog/: color_dialog.py  file_dialog.py  loading_dialog.py  message_dialog.py
difference_viewer/components/display/: display_model.py  display_view.py  display_vm.py
difference_viewer/components/main_window/: main_view.py  main_vm.py
difference_viewer/components/page/: page_model.py  page_view.py  page_vm.py
difference_viewer/components/prefs_window/: prefs_view.py  prefs_vm.py
difference_viewer/core/: converter.py  imaging.py  logger.py  shared_model.py
difference_viewer/resources/: display.ui  main_window.ui  page.ui  prefs_window.ui
difference_viewer/resources/styles/: dark.qss  dialog.qss  light.qss
difference_viewer/resources/themes/: dark.qss  light.qss
difference_viewer/widgets/: autoresized.py  patch.py
